[package]
name = "streamcatcher"
version = "0.1.0"
license = "MIT/Apache-2.0"
homepage = "https://github.com/FelixMcFelix/streamcatcher"
repository = "https://github.com/FelixMcFelix/streamcatcher.git"
authors = ["Kyle Simpson <kyleandrew.simpson@gmail.com>"]
keywords = ["async", "io", "bytes", "concurrent"]
categories = ["asynchronous", "caching", "concurrency"]
description = "A thread-safe, shared (asynchronous), almost-lockless stream buffer."
readme = "README.md"
documentation = "https://docs.rs/streamcatcher"
edition = "2018"

[features]
default = []
async = ["async-trait"]
async-std-compat = ["async", "async-std"]
smol-compat = ["async", "smol"]
tokio-compat = ["async", "tokio"]

# Dependencies
[dependencies]
crossbeam-utils = "0.7"
futures = "0.3"

[dependencies.async-std]
optional = true
version = "1"

[dependencies.async-trait]
optional = true
version = "0.1"

[dependencies.smol]
optional = true
version = "0.3"

[dependencies.tokio]
features = ["rt-core"]
optional = true
version = "0.2"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.3", features = ["checkpoint"] }

# Testing.
[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
criterion = "0.3"
futures = "0.3"
synchronoise = "1"
smol = "0.3"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
utils = { path = "utils" }

[[test]]
name = "async"
required-features = ["async-std-compat", "smol-compat", "tokio-compat"]

[[bench]]
name = "vary-threads"
harness = false

# Misc.
[package.metadata.docs.rs]
all-features = true

